refactor: reorganize error handling structure and remove unused files
- Moved BaseError and StructuredError to a dedicated 'errors' directory.
- Removed unused BaseError and StructuredError files to streamline the codebase.
- Updated imports in tests and index file to reflect new structure.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ tmp
 
 # Build
 public/css/main.css
+dist/
 
 # Coverage reports
 coverage
@@ -39,3 +40,7 @@ dist/**/*
 
 # ignore yarn.lock
 yarn.lock
+
+# ai agents
+.cursor/
+.claude/
